<resources>
    <string name="app_name">Fpay</string>
    <string name="let_s_sign_you_in">Let\'s Sign You In</string>
    <string name="welcome_user">Welcome User</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_an_account">create an account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="currency">₹</string>
    <string name="fpay_wallet_balance">Fpay Wallet Balance</string>
    <string name="top_up">Top up</string>
    <string name="transfer">Transfer</string>
    <string name="withdraw">Withdraw</string>
    <string name="gettings_started">Gettings Started</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup">Signup</string>
    <string name="spendings">Spendings</string>
    <string name="qr_pay">QR Pay</string>
    <string name="scanner">Scanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">General</string>
    <string name="logout">Logout</string>
    <string name="transaction_history">Transaction History</string>
    <string name="contact">Contact</string>
    <string name="settings">Settings</string>
    <string name="add_card">Add Card</string>
    <string name="biometric_title">Fpay Authenticate</string>
    <string name="biometric_subtitle">Securely authenticate to your fpay account</string>
    <string name="biometric_description">Place your finger on the biometric scanner</string>
    <string name="biometric_negative_button_text">Cancel</string>
    <string name="biometric_error_sdk_not_supported">"Android version does not support biometric "</string>
    <string name="biometric_error_hardware_not_supported">Biometric Scanner Error</string>
    <string name="biometric_error_not_available">Biometric is not available</string>
    <string name="biometric_error_permission_not_granted">Biometric permission required</string>
    <string name="biometric_error_failed">Biometric authentication failed</string>
    <string name="biometric_cancelled">Biometric Authentication Cancelled</string>
    <string name="biometric_success">Biometric Authentication Success</string>
    <string name="wallet_topup">Wallet Topup</string>
    <string name="confirm_topup">Confirm Topup</string>
    <string name="inr">INR</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="featured">Featured</string>
    <string name="use_fingerprint">Use Fingerprint</string>
    <string name="enter_amount">Enter Amount</string>
</resources>