<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <com.luseen.spacenavigation.SpaceNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:translationZ="90dp"
        app:active_item_color="@color/colorPrimary"
        app:centre_button_color="@color/colorPrimary"
        app:centre_button_icon="@drawable/ic_qr_code"
        app:inactive_centre_button_icon_color="@color/colorWhite"
        app:inactive_item_color="@color/colorDarkGrey"
        app:space_background_color="@color/colorWhite"
        app:layout_behavior="com.luseen.spacenavigation.SpaceNavigationViewBehavior"/>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight">


        <Button
            android:id="@+id/btn_top_up"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_rounded"
            android:drawableTop="@drawable/topup_bg"
            android:fontFamily="@font/poppins"
            android:padding="@dimen/padding_small"
            android:text="@string/top_up"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />



        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/colorTransparent"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_transfer">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_view_background">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/featured"
                    android:textSize="@dimen/font_sub_heading"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ss.com.bannerslider.Slider
                    android:id="@+id/banner_slider"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"
                    app:slider_emptyView="@layout/placeholder_credit_card"
                    app:slider_interval="3000"
                    app:slider_loopSlides="true" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/spendings"
                    android:textSize="@dimen/font_sub_heading"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/banner_slider" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView26">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_spendings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    </LinearLayout>

                </ScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/currency"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_heading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_wallet_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="16,003.00"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_heading"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/fpay_wallet_balance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/btn_transfer"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/btn_rounded"
            android:drawableTop="@drawable/transfer_bg"
            android:fontFamily="@font/poppins"
            android:padding="@dimen/padding_small"
            android:text="@string/transfer"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toEndOf="@+id/btn_top_up"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <Button
            android:id="@+id/button3"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_rounded"
            android:drawableTop="@drawable/withdraw_bg"
            android:fontFamily="@font/poppins"
            android:padding="@dimen/padding_small"
            android:text="@string/withdraw"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>